Modal for edit photo

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
     <title>Transcendence</title>
   </head>
   <body>
+    <div class="before-root" id="before-root"></div>
     <div class="root" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
